--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
+@tailwind base;
+@tailwind components;
+
+@font-face {
+  font-family: 'SofiaProRegular';
+  src: local('SofiaProRegular'), url(./fonts/SofiaProRegular.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'SofiaProBold';
+  src: local('SofiaProBold'), url(./fonts/SofiaPro-Bold.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'SofiaProMedium';
+  src: local('SofiaProMedium'), url(./fonts/SofiaPro-Medium.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'SofiaProLight';
+  src: local('SofiaProLight'), url(./fonts/SofiaPro-Light.ttf) format('truetype');
+}
+
+@tailwind utilities;
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: SofiaProRegular, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
